--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -8,3 +8,11 @@ body {
     background-color: lightblue;
     opacity: 0.7;
 }
+
+.video {
+    border: 3px solid black;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
