--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -3,10 +3,12 @@ body {
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
+    padding: 100px
     font-family: "Times New Roman";
     font-weight: bold;
-    background-color: lightblue;
+    background-color: #03a9f4;
     opacity: 0.7;
+    text-align: center;
 }
 
 video {
