--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -3,7 +3,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
-    padding: 100px
+    padding: 150px;
     font-family: "Times New Roman";
     font-weight: bold;
     background-color: #03a9f4;
