--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -3,18 +3,17 @@ body {
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
-    padding: 150px;
     font-family: "Times New Roman";
     font-weight: bold;
     background-color: #03a9f4;
     opacity: 0.7;
+}
+p, h1, h2, h3, h4 {
     text-align: center;
 }
-
 video {
     border: 3px solid black;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
