--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -8,9 +8,11 @@ body {
     background-color: #03a9f4;
     opacity: 0.7;
 }
-p, h1, h2, h3, h4 {
+
+p, h1, h2, h4 {
     text-align: center;
 }
+
 video {
     border: 3px solid black;
     display: block;
