--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -4,7 +4,6 @@ body {
     margin-right: auto;
     border-style: solid;
     font-family: "Times New Roman";
-    font-weight: bold;
     background-color: #03a9f4;
     opacity: 0.7;
 }
@@ -12,6 +11,11 @@ body {
 p, h1, h2, h4 {
     text-align: center;
 }
+
+h1, h2 {
+    font-weight: bold;
+}
+    
 
 video {
     border: 3px solid black;
