--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -2,7 +2,7 @@ body {
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
-    border-style: solid;
+    border-style: 2px;
     font-family: "Times New Roman";
     background-color: #03a9f4;
     opacity: 0.7;
@@ -10,7 +10,7 @@ body {
 
 p, h1, h2, h4 {
     text-align: center;
-    padding: 50px;
+    padding: 100px;
 }
 
 h1, h2 {
