--- a/AnimationProject.CSS
+++ b/AnimationProject.CSS
@@ -19,6 +19,11 @@ h1, h2 {
     text-decoration: underline;
 }
     
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 video {
     border: 3px solid black;
